--- a/Trollie/app/build.gradle
+++ b/Trollie/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
