--- a/Trollie/app/build.gradle
+++ b/Trollie/app/build.gradle
@@ -11,6 +11,11 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -30,4 +35,6 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.firebase:firebase-client-android:2.5.1+'
 }
+
